fixing some errors and styling

--- a/Assests/Styles/styles.css
+++ b/Assests/Styles/styles.css
@@ -133,3 +133,8 @@
 #last-footer {
     margin: 0px 20px 20px -20px;
 }
+.footer ul li img {
+    height: 15px;
+    width: 23px;
+    padding-left: 3px;
+}
